statum-macros/tests/ui/invalid_presentation_metadata_without_types.stderr
error: Error: state `FlowState::Draft` uses `#[present(metadata = ...)]`, but machine `Flow` did not declare `#[presentation_types(state = ...)]`.
       Found: `#[present(metadata = FlowStateMeta :: Draft)]`
       Expected: `#[presentation_types(state = StateMeta)]` on machine `Flow`
       Fix: add `#[presentation_types(state = StateMeta)]` to the `#[machine]` struct or remove the metadata expression.
  --> tests/ui/invalid_presentation_metadata_without_types.rs:24:1
   |
24 | #[machine]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
